--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "hyperf-pro-yy/upload",
+  "name": "hyperf-enhanced/upload",
   "description": "hyperf版本3.0  上传功能",
   "authors": [
     {
